# kohagi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROTOCOL.md  README.md
.github/workflows/: ci.yml
examples/: README.md  benchmark.py  model_check.py  parity_check.py  rails_open3.rb  scaling_check.py
scripts/: convert_coreml.py
src/: batch.rs  config.rs  coreml.rs  encoder.rs  errors.rs  fused.rs  lib.rs  main.rs  model.rs  stdio.rs
src/bf16/: geglu.rs  gemm.rs  mod.rs  modernbert.rs  simd.rs  softmax.rs
src/coreml/: provision.rs
