[package]
name = "kohagi"
version = "0.1.0"
edition = "2021"
description = "Local sentence embeddings for Ruri v3 and other ModernBERT models: JSONL in, vectors out. Pure Rust, bounded memory."
license = "MIT"
repository = "https://github.com/takahashim/kohagi"
keywords = ["embeddings", "ruri", "modernbert", "candle", "jsonl"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
num_cpus = "1"
tokenizers = "0.21"
half = "2"
hf-hub = "0.4"

# candle runs pure-CPU by default; the macOS target below adds Apple Accelerate
# (AMX) for its sgemm. Apple GPU support is behind the `metal` feature — see
# `Backend` in src/model.rs for why it is opt-in rather than the default.
candle-core = "0.11"
candle-nn = "0.11"
candle-transformers = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.11", features = ["accelerate"] }

[features]
# Apple GPU via candle's Metal backend: `cargo build --release --features metal`,
# then `kohagi --device metal`. Off by default because it is not yet measured to
# beat the Accelerate CPU path, and it pulls in candle-metal-kernels.
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[profile.release]
lto = "thin"

# candle-transformers is vendored with four changes to its ModernBERT — all
# Metal wins that leave f32 output unchanged. See vendor/candle-transformers/
# NOTES.md for the measurements, modernbert.patch for the diff against the
# published 0.11.0 crate.
[patch.crates-io]
candle-transformers = { path = "vendor/candle-transformers" }
