[package]
name = "kohagi"
version = "0.1.0"
edition = "2021"
description = "Local sentence embeddings for Ruri v3 and other ModernBERT models: JSONL in, vectors out. Pure Rust, bounded memory."
license = "MIT"
repository = "https://github.com/takahashim/kohagi"
keywords = ["embeddings", "ruri", "modernbert", "candle", "jsonl"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
num_cpus = "1"
tokenizers = "0.21"
half = "2"
hf-hub = "0.4"

# candle runs pure-CPU by default; the macOS target below adds Apple Accelerate
# (AMX) for its sgemm. Apple GPU support is behind the `metal` feature — see
# `Backend` in src/model.rs for why it is opt-in rather than the default.
#
# The ModernBERT encoder lives in src/encoder.rs rather than pulling in
# candle-transformers: it is one self-contained file, and carrying it directly
# keeps kohagi's Metal changes in the build even when installed from crates.io.
candle-core = "0.11"
candle-nn = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.11", features = ["accelerate"] }

[features]
# Apple GPU via candle's Metal backend: `cargo build --release --features metal`,
# then `kohagi --device metal`. ~1.8x the Accelerate CPU path on an M2 at 512
# tokens; off by default because it is macOS-only and pulls in
# candle-metal-kernels.
metal = ["candle-core/metal", "candle-nn/metal"]

[profile.release]
lto = "thin"

